--- a/index.html
+++ b/index.html
@@ -1,146 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enter Your Name</title>
-    <style>
-        /* Basic page styling */
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dynamic Step Form</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+    body {
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #121212;
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-        /* Logo styling */
-        .logo {
-            width: 150px;
-            margin-bottom: 20px;
-        }
+    .form-container {
+      background: #1f1f1f;
+      padding: 20px 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      width: 100%;
+      max-width: 400px;
+    }
 
-        /* Form styling */
-        .form-container {
-            display: flex;
-            align-items: center;
-            border: 1px solid #ddd;
-            border-radius: 30px;
-            padding: 10px;
-            background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 22px;
+    }
 
-        /* Input styling */
-        #user-name {
-            border: none;
-            outline: none;
-            padding: 10px;
-            font-size: 16px;
-            flex-grow: 1;
-            border-radius: 30px;
-        }
+    .form-step {
+      margin-bottom: 15px;
+    }
 
-        /* Submit button (arrow) styling */
-        .submit-btn {
-            background-color: #007bff;
-            border: none;
-            color: white;
-            padding: 10px 15px;
-            cursor: pointer;
-            border-radius: 50%;
-            font-size: 16px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: background-color 0.3s;
-        }
+    label {
+      display: block;
+      font-size: 14px;
+      margin-bottom: 5px;
+    }
 
-        .submit-btn:hover {
-            background-color: #0056b3;
-        }
+    input {
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      border: 1px solid #444;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      background-color: #2c2c2c;
+      color: #ffffff;
+    }
 
-        /* Loading spinner */
-        .loading-spinner {
-            display: none;
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #007bff;
-            border-radius: 50%;
-            width: 20px;
-            height: 20px;
-            animation: spin 1s linear infinite;
-            margin-left: 10px;
-        }
+    input:focus {
+      border-color: #e3b23c;
+      outline: none;
+    }
 
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-    </style>
+    .next-btn, .submit-btn {
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: #e3b23c;
+      color: #000;
+    }
+
+    .submit-btn {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-    <!-- Logo -->
-    <img src="logo.png" alt="Logo" class="logo">
 
-    <!-- Input Form -->
-    <div class="form-container">
-        <input type="text" id="user-name" placeholder="Enter your name" required>
-        <button class="submit-btn" id="submit-btn">→</button>
-        <div class="loading-spinner" id="loading-spinner"></div>
-    </div>
+<div class="form-container">
+  <h2>Dynamic Form</h2>
+  <!-- Step 1 -->
+  <div class="form-step">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+  </div>
+  <!-- Step 2 -->
+  <div class="form-step" id="email-step" style="display: none;">
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+  </div>
+  <!-- Step 3 -->
+  <div class="form-step" id="phone-step" style="display: none;">
+    <label for="phone">Phone</label>
+    <input type="text" id="phone" name="phone" placeholder="Enter your phone number" required>
+  </div>
+  <!-- Buttons -->
+  <button type="button" class="next-btn" id="next-btn">Next</button>
+  <button type="button" class="submit-btn" id="submit-btn">Submit</button>
+</div>
 
-    <script>
-        document.getElementById('submit-btn').addEventListener('click', function(event) {
-            event.preventDefault();
+<script>
+  const nextBtn = document.getElementById('next-btn');
+  const submitBtn = document.getElementById('submit-btn');
+  const emailStep = document.getElementById('email-step');
+  const phoneStep = document.getElementById('phone-step');
+  const nameInput = document.getElementById('name');
+  const emailInput = document.getElementById('email');
+  const phoneInput = document.getElementById('phone');
+  let currentStep = 1;
 
-            const userName = document.getElementById('user-name').value;
-            const loadingSpinner = document.getElementById('loading-spinner');
-            
-            if (!userName) {
-                alert("Please enter your name.");
-                return;
-            }
+  nextBtn.addEventListener('click', () => {
+    if (currentStep === 1 && nameInput.value.trim() === "") {
+      alert("Please enter your name.");
+      return;
+    }
+    if (currentStep === 2 && emailInput.value.trim() === "") {
+      alert("Please enter your email.");
+      return;
+    }
 
-            // Show the loading spinner
-            loadingSpinner.style.display = 'inline-block';
+    if (currentStep === 1) {
+      emailStep.style.display = 'block';
+      currentStep++;
+    } else if (currentStep === 2) {
+      phoneStep.style.display = 'block';
+      nextBtn.style.display = 'none';
+      submitBtn.style.display = 'block';
+      currentStep++;
+    }
+  });
 
-            // Get the user's IP address using ipify
-            fetch('https://api.ipify.org?format=json')
-                .then(response => response.json())
-                .then(data => {
-                    const userIP = data.ip;
+  submitBtn.addEventListener('click', () => {
+    if (phoneInput.value.trim() === "") {
+      alert("Please enter your phone number.");
+      return;
+    }
 
-                    console.log('User IP Address:', userIP); // Debugging line to see the IP address
+    // Send data to Google Sheets
+    const scriptURL = 'https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec'; // Replace with your script URL
+    const formData = new URLSearchParams({
+      name: nameInput.value,
+      email: emailInput.value,
+      phone: phoneInput.value
+    });
 
-                    // Send the name and IP address to Google Sheets via Google Apps Script
-                    fetch(`https://script.google.com/macros/s/AKfycbzPPN21kSk1aMeTXzIqMgaF3G9kK-Emh7D-KvcWKth8S9ufoLVwqLihWiKYFqkdI4Fi/exec?user=${encodeURIComponent(userName)}&ip=${encodeURIComponent(userIP)}`)
-                        .then(response => response.json())
-                        .then(data => {
-                            if (data.referralLink) {
-                                // Redirect to the referral link
-                                window.location.href = data.referralLink;
-                            } else {
-                                alert(data.error || "No available referral links.");
-                            }
-                        })
-                        .catch(error => {
-                            alert("Error submitting data.");
-                            console.error('Error:', error);
-                        })
-                        .finally(() => {
-                            // Hide the loading spinner
-                            loadingSpinner.style.display = 'none';
-                        });
-                })
-                .catch(error => {
-                    alert("Error fetching IP address.");
-                    console.error('Error:', error);
-                });
-        });
-    </script>
+    fetch(scriptURL, {
+      method: 'POST',
+      body: formData
+    })
+    .then(response => {
+      alert("Form submitted successfully!");
+      nameInput.value = "";
+      emailInput.value = "";
+      phoneInput.value = "";
+      window.location.reload();
+    })
+    .catch(error => {
+      alert("An error occurred while submitting the form.");
+      console.error("Error:", error);
+    });
+  });
+</script>
+
 </body>
 </html>
